--- a/formalmodels2019/analysis.Rmd
+++ b/formalmodels2019/analysis.Rmd
@@ -11,6 +11,9 @@ get dat data
 movie_data <- read.csv('prepared.csv')
 noms <- read.csv("nominations.csv")
 films <-read.csv("films.csv")
+
+movie_data$adjusted_boxoffice <- movie_data$box_office * inflation_adjust(movie_data$year)
+
 BestPicNoms <- noms %>% filter(category == "Picture", award == "Oscar")
 bestnom2 <- left_join(BestPicNoms, films, by = "film")
 ```
@@ -42,33 +45,14 @@ summary(oscar_by_lots)
 ```
 
 ```{r}
-get_n_percent_of_data <- function(data, n) {
-  num_samples <- nrow(data) * ( n / 100)
-  print(num_samples)
-  # get n percent of data
-  return(sample_n(data, num_samples))
-}
-
-
-## set the seed to make your partition reproducible
+## Split data into train and test set
 split_data_n_percent <- function(data, n) {
   set.seed(123)
   train_ind <- sample(seq_len(nrow(movie_data)), size = sample_size)
   train <- movie_data[train_ind, ]
   test <- movie_data[-train_ind, ] 
-  ## internet solution
-  ## 90% of the sample size
-  sample_size <- floor(0.90 * nrow(movie_data))
 }
-
-
 ```
-
-### test on data that isn't in set
-```{r}
-
-```
-
 
 
 #### Inflication adjust
